--- a/templates/exportimport/parcel_booking.html
+++ b/templates/exportimport/parcel_booking.html
@@ -163,6 +163,8 @@
                 <select id="direction" required class="form-input">
                     <option value="">Select Direction</option>
                     <option value="BD_TO_HK">Bangladesh → Hong Kong</option>
+                    <option value="BD_TO_UK">Bangladesh → United Kingdom</option>
+                    <option value="BD_TO_CN">Bangladesh → China</option>
                 </select>
             </div>
             
